src/frontend/antlr4/MiniC.g4
// 懒的取名了, 就还叫这个吧
grammar MiniC;

// 词法规则名总是以大写字母开头

// 语法规则名总是以小写字母开头

// 每个非终结符尽量多包含闭包、正闭包或可选符等的EBNF范式描述

// 若非终结符由多个产生式组成，则建议在每个产生式的尾部追加# 名称来区分，详细可查看非终结符statement的描述

// 语法规则描述：EBNF范式

// 源文件编译单元定义
compUnit: (funcDef | varDecl | constDecl)* EOF;

// 函数定义，返回类型使用funcType
funcDef: T_STATIC? funcType T_ID T_L_PAREN funcFParams? T_R_PAREN block;

// 函数返回类型
funcType: T_INT | T_VOID | T_FLOAT;

// 函数形参列表
funcFParams: funcFParam (T_COMMA funcFParam)*;

// 函数形参，支持基本类型标量和数组形参
funcFParam: basicType T_ID funcArrayDims?;

// 函数形参数组维度，第一维按C/SysY规则省略
funcArrayDims: T_L_BRACKET T_R_BRACKET (T_L_BRACKET expr T_R_BRACKET)*;

// 语句块看用作函数体，这里允许多个语句，并且不含任何语句
block: T_L_BRACE blockItemList? T_R_BRACE;

// 每个ItemList可包含至少一个Item
blockItemList: blockItem+;

// 每个Item可以是一个语句，或者变量声明语句
blockItem: statement | varDecl | constDecl;

// 变量声明，支持可选初始化
varDecl: T_STATIC? basicType varDef (T_COMMA varDef)* T_SEMICOLON;

// 基本类型
basicType: T_INT | T_FLOAT;

// 常量声明
constDecl: T_STATIC? T_CONST basicType constDef (T_COMMA constDef)* T_SEMICOLON;

// 常量定义
constDef: T_ID arrayDims? T_ASSIGN initVal;
// 变量定义
varDef: T_ID arrayDims? (T_ASSIGN initVal)?;

// 数组维度
arrayDims: (T_L_BRACKET expr T_R_BRACKET)+;

// 初始化值，数组初始化时支持嵌套花括号
initVal: expr | T_L_BRACE (initVal (T_COMMA initVal)*)? T_R_BRACE;

// 语句
statement:
	T_RETURN expr? T_SEMICOLON			# returnStatement
	| lVal T_ASSIGN expr T_SEMICOLON	# assignStatement
	| T_IF T_L_PAREN expr T_R_PAREN statement (T_ELSE statement)? # ifStatement
	| T_WHILE T_L_PAREN expr T_R_PAREN statement # whileStatement
	| T_FOR T_L_PAREN forInit? T_SEMICOLON expr? T_SEMICOLON forStep? T_R_PAREN statement # forStatement
	| T_BREAK T_SEMICOLON				# breakStatement
	| T_CONTINUE T_SEMICOLON			# continueStatement
	| block								# blockStatement
	| expr? T_SEMICOLON					# expressionStatement;

// for循环初始化部分，支持变量声明、赋值或普通表达式，多个表达式用逗号分隔
forInit: basicType varDef (T_COMMA varDef)* | forItem (T_COMMA forItem)*;

// for循环步进部分，支持赋值或普通表达式，多个表达式用逗号分隔
forStep: forItem (T_COMMA forItem)*;

// for循环头中的单个表达式项
forItem: lVal T_ASSIGN expr | expr;

// 表达式
expr: lOrExp;

// 逻辑或表达式
lOrExp: lAndExp (T_LOR lAndExp)*;

// 逻辑与表达式
lAndExp: eqExp (T_LAND eqExp)*;

// 相等性表达式
eqExp: relExp ((T_EQ | T_NE) relExp)*;

// 关系表达式
relExp: addExp ((T_LT | T_LE | T_GT | T_GE) addExp)*;

// 加减表达式
addExp: mulExp (addOp mulExp)*;

// 加减运算符
addOp: T_ADD | T_SUB;

// 乘除模表达式
mulExp: unaryExp (mulOp unaryExp)*;

// 乘除模运算符
mulOp: T_MUL | T_DIV | T_MOD;

// 一元表达式
unaryExp:
	T_INC lVal
	| T_DEC lVal
	| unaryOp unaryExp
	| primaryExp
	| T_ID T_L_PAREN realParamList? T_R_PAREN;

// 一元运算符
unaryOp: T_ADD | T_SUB | T_NOT;

// 基本表达式：括号表达式、整数、浮点数、左值表达式
primaryExp: T_L_PAREN expr T_R_PAREN | T_DIGIT | T_FLOAT_LITERAL | lVal (T_INC | T_DEC)?;

// 实参列表
realParamList: expr (T_COMMA expr)*;

// 左值表达式
lVal: T_ID (T_L_BRACKET expr T_R_BRACKET)*;

// 用正规式来进行词法规则的描述

T_L_PAREN: '(';
T_R_PAREN: ')';
T_SEMICOLON: ';';
T_L_BRACE: '{';
T_R_BRACE: '}';
T_L_BRACKET: '[';
T_R_BRACKET: ']';

T_ASSIGN: '=';
T_COMMA: ',';

T_INC: '++';
T_DEC: '--';

T_EQ: '==';
T_NE: '!=';
T_LE: '<=';
T_GE: '>=';
T_LT: '<';
T_GT: '>';
T_LAND: '&&';
T_LOR: '||';

T_ADD: '+';
T_SUB: '-';
T_MUL: '*';
T_DIV: '/';
T_MOD: '%';
T_NOT: '!';

// 要注意关键字同样也属于T_ID，因此必须放在T_ID的前面，否则会识别成T_ID
T_IF: 'if';
T_ELSE: 'else';
T_WHILE: 'while';
T_FOR: 'for';
T_BREAK: 'break';
T_CONTINUE: 'continue';
T_RETURN: 'return';
T_INT: 'int';
T_FLOAT: 'float';
T_CONST: 'const';
T_STATIC: 'static';
T_VOID: 'void';


T_ID: [a-zA-Z_][a-zA-Z0-9_]*;
fragment T_HEX_DIGIT: [0-9a-fA-F];
fragment T_OCT_DIGIT: [0-7];
T_FLOAT_LITERAL:
	([0-9]+ '.' [0-9]* | '.' [0-9]+) ([eE] [+-]? [0-9]+)?
	| [0-9]+ [eE] [+-]? [0-9]+
	| '0' [xX] ([0-9a-fA-F]+ '.' [0-9a-fA-F]* | '.' [0-9a-fA-F]+ | [0-9a-fA-F]+) [pP] [+-]? [0-9]+;
T_DIGIT: '0' [xX] T_HEX_DIGIT+ | '0' T_OCT_DIGIT* | [1-9][0-9]*;
LINE_COMMENT: '//' ~[\r\n]* -> skip;
BLOCK_COMMENT: '/*' .*? '*/' -> skip;

/* 空白符丢弃 */
WS: [ \r\n\t]+ -> skip;
